js/src/jit-test/tests/binast/invalid/identifier-function-name.binjs
BINJS
[
GRAMMAR
]
identity
;
k
(
AssertedDeclaredName
AssertedParameterScope2AssertedScriptGlobalScope
AssertedVarScope
"
BindingIdentifier0EagerFunctionDeclaration
FormalParameters0FunctionOrMethodContents
Script
[
STRINGS
]
identity
;
1
f
var
[
TREE
]
identity
;
<
